<resources>
    <string name="app_name">TestApplication</string>
    <string name="title_activity_dialog">DialogActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_item">CreateItemActivity</string>
    <string name="open_navigation_drawer">Open</string>
    <string name="close_navigation_drawer">Close</string>
    <string name="notification_title">Don\'t forget!</string>
    <string name="edit_item_title">Edit item</string>
    <string name="enter_new_title">Enter new item</string>
    <string name="name">Name</string>
    <string name="ok_string">ОК</string>
    <string name="set_reminder_checkbox_label">Set Reminder</string>
    <string name="repeating_every_label">Repeating every</string>
    <string name="window_title">Task Manager</string>
    <string name="cancel_btn">Cancel</string>
    <string name="deleted_string">Item %s deleted!</string>
    <string name="alert_dialog_fragment_tag">Alert Dialog Fragment</string>
    <string name="attention">Attention</string>
    <string name="no_such_task_error">Sorry, there\'s no such task. Check if it was already deleted.</string>
    <string name="incorrect_time_error">You have chosen the time less than the current time! The task was not created.</string>
    <string name="incorrect_alarm_time_error">You have chosen the time of the alarm less than the current time! The task was not created.</string>
    <string name="local_label">Local</string>
    <string name="remote_label">Remote</string>
    <string name="filename_hint">Name of the file</string>
    <string name="path_to_server_hint">Path to server</string>
    <string name="export_title">Export</string>
    <string name="no_connection_error">There\'s no connection to server. Please make sure that you have turned on internet on your phone.</string>
    <string name="remote_not_enabled"><u>Log in to enable</u></string>
    <string name="wrong_path_error">The path to file is wrong!</string>
    <string name="io_error">An error has occurred during writing to file. Please try again later.</string>
    <string name="file_created">The file was created in:</string>
    <string name="folder_name">Tasks</string>
    <string name="open_folder_checkbox_label">Open folder after creation</string>
    <string name="database_version_label">Database version</string>
    <string name="import_label">Import</string>
    <string name="db_version_hint">1</string>
    <string name="files_list_title">Choose one of the files:</string>
    <string name="corrupt_file_error">The file you have chosen is corrupt. You may delete it.</string>
    <string name="file_not_chosen_error">You have not chosen any file.</string>
    <string name="items_added_label"> item(s) were added</string>
    <string name="io_server_error">Can not reach server. Please check your connection.</string>
    <string name="server_success">The files were sent to:</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_label">Login</string>
    <string name="error_message_server">A server-side issue has occurred. Please try again later.</string>
    <string name="unauthorized_error">Wrong credentials.</string>
    <string name="connection_error">Connection error. Please check your connection to the internet.</string>
    <string name="create_file_error">An error creating the file.</string>
    <string name="unexpected_error">An unexpected error.</string>
    <string name="feature_not_implemented">Sorry. Feature %s has not yet been implemented.</string>
    <string name="url_empty_error">You have not entered url.</string>
    <string name="login_fake_json">{code:200, message:\"\", token:\"token\", expirationDate:1492783950947}</string>
    <string name="export_fake_json">{code: 200, message:\"\", userId: 11}</string>
    <string name="fake_task_import_json">{code:200, message:\'\', items:\'[{\"alarm_time\":0,\"id\":0,\"name\":\"TEST\",\"notification\":false,\"time\":0},{\"alarm_time\":0,\"id\":0,\"name\":\"TEST-1\",\"notification\":false,\"time\":0}]\'}</string>

    <string-array name="drawer_items">
        <item>Import</item>
        <item>Export</item>
        <item>Login</item>
    </string-array>

    <string-array name="drawer_items_for_logged_in">
        <item>Import</item>
        <item>Export</item>
        <item>Logout</item>
    </string-array>

    <string-array name="reminder">
        <item>in time</item>
        <item>a minute before</item>
        <item>10 minutes before</item>
        <item>an hour before</item>
        <item>a day before</item>
    </string-array>
</resources>
